TestSuite/Syntax/Errors/DepLoop9.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 2000-01-08

task a "Task A" {
	start 2000-01-01

	task m1 "Milestone1" {
		precedes !b1.c2
		scheduling asap
		milestone
	}	
	task b1 "Task B1" {
		task c1 "Task C1" {
			depends !!m1
			length 1d
		}
		task c2 "Task C2" {
			precedes !!b2.c2
			length 1d
		}
	}

	task b2 "Task B2" {
		task c1 "Task C1" {
			length 1d
			depends !!b1.c1
		}
		task c2 "Task C2" {
			precedes !!m2
			length 1d
		}
	}	
	task m2 "Milestone2" {
		depends !b2.c1
		scheduling alap
		milestone
	}
}

